--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,41 +1,38 @@
-
 [package]
-
-edition = '2018'
-build = './common/build/build.rs'
-name = 'overlay'
-version = '0.6.34'
-description = 'Overlay protocol library'
+edition = "2018"
+build = "./common/build/build.rs"
+name = "overlay"
+version = "0.6.35"
+description = "Overlay protocol library"
+resolver = "2"
 
 [workspace]
 
 [dependencies]
+async-trait = "0.1"
+base64 = "0.13"
+failure = "0.1"
+hex = "0.4"
+log = "0.4"
+rand = "0.7"
+sha2 = "0.9"
+tokio = { version = "1.5", features = ["rt-multi-thread"] }
 
-arrayref = '0.3.5'
-async-trait = '0.1.22'
-base64 = '0.11.0'
-failure = '0.1.6'
-hex = '^0'
-log = '0.4.8'
-rand = '0.7.2'
-sha2 = '0.8.0'
-tokio = { version = '1.5.0', features = [ 'rt-multi-thread' ] }
-ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.110' }
-adnl = { git = 'https://github.com/tonlabs/ton-labs-adnl.git', features = [ 'node' ], tag = '0.7.53' }
-rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.49' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.27' }
-ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.10.10' }
-lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
+ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.111' }
+adnl = { git = 'https://github.com/tonlabs/ton-labs-adnl.git', features = [ 'node' ], tag = '0.7.55' }
+rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.50' }
+ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.29' }
+ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.10.11' }
+lockfree = { git = "https://github.com/tonlabs/lockfree.git" }
 
 [dev-dependencies]
-
-dht = { git = 'https://github.com/tonlabs/ton-labs-dht.git' }
-external-ip = '4.1.0'
-log4rs = '0.8.3'
-serde_json = '1.0.41'
-socket2 = '0.3.19'
+dht = { git = "https://github.com/tonlabs/ton-labs-dht.git", tag = '0.5.48' }
+external-ip = "4.1"
+log4rs = "1.0"
+serde_json = "1.0"
+socket2 = "0.3"
 
 [features]
-
-compression = [ 'adnl/compression' ]
-telemetry = [ 'adnl/telemetry', 'rldp/telemetry' ]
+compression = ["adnl/compression"]
+telemetry = ["adnl/telemetry", "rldp/telemetry"]
+telemetry_test_only = ["adnl/telemetry", "dht/telemetry", "rldp/telemetry"]
