--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = 'Overlay protocol library'
 edition = '2018'
 name = 'overlay'
 resolver = '2'
-version = '0.6.50'
+version = '0.6.51'
 
 [workspace]
 
@@ -16,21 +16,21 @@ hex = '0.4'
 log = '0.4'
 rand = '0.7'
 sha2 = '0.9'
-adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ton-labs-adnl', tag = '0.7.67' }
-ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto.git', tag = '0.1.7' }
+adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ton-labs-adnl', tag = '0.7.68' }
+ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto.git', tag = '0.1.8' }
 lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
-rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp', tag = '0.7.61' }
+rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp', tag = '0.7.62' }
 tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
-ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl', package = 'ton_api', tag = '0.2.120' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block', tag = '1.7.39' }
-ton_types = { git = 'https://github.com/tonlabs/ton-labs-types', tag = '1.10.12' }
+ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.120' }
+ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.7.41' }
+ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.10.13' }
 
 [dev-dependencies]
 external-ip = '4.1'
 log4rs = '1.0'
 serde_json = '1.0'
 socket2 = '0.3'
-dht = { git = 'https://github.com/tonlabs/ton-labs-dht', tag = '0.5.62' }
+dht = { git = 'https://github.com/tonlabs/ton-labs-dht', tag = '0.5.63' }
 
 [features]
 dump = [ 'adnl/dump' ]
