--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,13 @@ ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto.git', tag = '
 lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
 rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.79' }
 tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
-ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.139' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.8.11' }
+ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', branch = 'consensus-updates' }
+ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', branch = 'consensus-updates' }
 ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.11.4' }
 
 [features]
 dump = [ 'adnl/dump' ]
 telemetry = [ 'adnl/telemetry', 'rldp/telemetry' ]
+
+[patch.'https://github.com/tonlabs/ton-labs-tl']
+ton_api = { git = 'https://github.com:443//tonlabs/ton-labs-tl', package = 'ton_api', branch = 'consensus-updates' }
