--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ log = '0.4'
 num-traits = '0.2'
 rand = '0.7'
 sha2 = '0.9'
-adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ton-labs-adnl.git', tag = '0.7.85' }
-ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto.git', tag = '0.1.48' }
+adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ton-labs-adnl.git', tag = '0.7.77' }
+ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto', branch = 'consensus-updates' }
 lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
-rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.79' }
+rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.71' }
 tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
 ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', branch = 'consensus-updates' }
 ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', branch = 'consensus-updates' }
@@ -33,3 +33,6 @@ telemetry = [ 'adnl/telemetry', 'rldp/telemetry' ]
 
 [patch.'https://github.com/tonlabs/ton-labs-tl']
 ton_api = { git = 'https://github.com:443//tonlabs/ton-labs-tl', package = 'ton_api', branch = 'consensus-updates' }
+
+[patch.'https://github.com/tonlabs/ever-labs-crypto']
+ever-crypto = { git = 'https://github.com:443//tonlabs/ever-labs-crypto', branch = 'consensus-updates' }
