--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,14 @@ log = '0.4'
 num-traits = '0.2'
 rand = '0.7'
 sha2 = '0.9'
-adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ton-labs-adnl.git', tag = '0.7.126' }
-ever-crypto = { git = 'https://github.com/tonlabs/ever-labs-crypto.git', tag = '0.1.86' }
+adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.7.126' }
+ever-crypto = { git = 'https://github.com/tonlabs/ever-crypto.git', tag = '0.1.86' }
 lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
-rldp = { git = 'https://github.com/tonlabs/ton-labs-rldp.git', tag = '0.7.120' }
+rldp = { git = 'https://github.com/tonlabs/ever-rldp.git', tag = '0.7.120' }
 tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
-ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl.git', package = 'ton_api', tag = '0.2.173' }
-ton_block = { git = 'https://github.com/tonlabs/ton-labs-block.git', tag = '1.9.22' }
-ton_types = { git = 'https://github.com/tonlabs/ton-labs-types.git', tag = '1.12.6' }
+ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.2.173' }
+ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.22' }
+ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '1.12.6' }
 
 [features]
 dump = [ 'adnl/dump' ]
